properly fixes tip of the round being hard to read

--- a/code/modules/goonchat/browserassets/css/browserOutput.css
+++ b/code/modules/goonchat/browserassets/css/browserOutput.css
@@ -332,7 +332,7 @@ em						{font-style: normal;	font-weight: bold;}
 .colossus				{color: #7F282A; font-size: 40px;}
 .hierophant				{color: #b441ee; font-weight: bold; font-style: italic;}
 .hierophant_warning		{color: #c56bf1; font-style: italic;}
-.purple					{color: #b362fa;}
+.purple					{color: #9956d3;}
 .holoparasite			{color: #88809c;}
 
 .revennotice			{color: #1d2953;}
